style.css
body {
    font-family: 'Iceland';
    font-size: 25px;
    margin: 0;
    padding: 0;
    color: #1F3044;
}

header {
    color: #fff;
    padding: 20px;
    text-align: center;
}

h1, h2, h3 {
    color: #007BFF;
}

section {
    padding: 20px;
    margin: 20px; 
}

#mobile_about_me {
    display: none;
}

.section_heading {
    text-align: center;
}

#top_projects {
    display: flex;
}

.top_project {
    padding: 20px;
    margin: 20px;
    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5);
    transition: all .5s ease-in-out;
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    background-color: rgba(204, 230, 244, 0.01);
    border-radius: 16px;
}

.top_project:hover {
    transform: scale(1.1);
}

#credits {
    border-radius: 8px;
    text-align: center;
}

.fa {
    padding: 20px;
    font-size: 30px;
    width: 50px;
    text-align: center;
    text-decoration: none;
    margin: 5px 2px;
    transition: all .5s ease-in-out;
}

.fa:hover {
    transform: scale(2);
}

.fa{
    color: #007BFF;
}
    
footer {
    text-align: center;
    padding: 10px;
    background-image: linear-gradient(#7d8dac69, #ffffff00);
    color: #007BFF;
    border-radius: 6px 6px 0px 0px;
}

/* Mobile configuration */

@media (max-width: 767px) {

    #top_projects,
    #mid_projects {
        display: flex;
        flex-direction: column;
    }

    #about_me {
        display: none;
    }

    #mobile_about_me {
        display: block;
    }
}

